--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Testing</title>
+    </head>
+    <body>
+
+        <h1>Woa... A heading?</h1>
+        <p>AND A PARAGRAPH?</p>
+        <p>I really don't know html, help.</p>
+
+    </body>
+</html>
