Corrected test site hyperlink Changelog: --Changed hyperling to reflect the change in the test site repository name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p>I really don't know html, help.</p>
 
         <h2>Want to see me learn and fail html?</h2>
-        <p>See my test site <a href="https://itschesterlk.github.io/testsite/">here!</a></p>
+        <p>See my test site <a href="https://itschesterlk.github.io/test-site/">here!</a></p>
 
     </body>
 </html>
