--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>itschesterlk</title>
-    </head>
-    <body>
+<head>
+    <title>itschesterlk</title>
+</head>
+<body>
 
-        <h1>Woa... A heading?</h1>
-        <p>AND A PARAGRAPH?</p>
-        <p>I really don't know html, help.</p>
+    <h1>Woa... A heading?</h1>
+    <p>AND A PARAGRAPH?</p>
+    <p>I really don't know html, help.</p>
 
-        <h2>Want to see me learn and fail html?</h2>
-        <p>See my test site <a href="https://itschesterlk.github.io/test-site/">here!</a></p>
+    <h2>Want to see me learn and fail html?</h2>
+    <p>See my test site <a href="testpage.html">here!</a></p>
 
-    </body>
+</body>
 </html>
