Playing with CSS Changelog: --Added a CSS folder and started styling the test page and index page

--- a/testpage.html
+++ b/testpage.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>Test Page</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-
+    <div class="content">
+        <h1>This is a Heading</h1>
+        <p>This is a paragraph.</p>
+        <p>This is a loooooooooooooooooooooooooooooooooooooooooooooooooooooooong paragraph.</p>
+    </div>
 </body>
 </html>
