Playing with CSS PART 2 Changelog: --Test page now has CONTAINERSSS

--- a/testpage.html
+++ b/testpage.html
@@ -5,10 +5,27 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="content">
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
-        <p>This is a loooooooooooooooooooooooooooooooooooooooooooooooooooooooong paragraph.</p>
-    </div>
+    <header id="main-header">
+        <div class="header-container">
+            <h1>THE TEST PAGE!>!1!</h1>
+        </div>
+    </header>
+
+    <section id="main">
+        <h2>As you may have already figured, I really dont know html.</h2>
+        <p>I'm just playign around with html and css. Eventually I will actually update the main site to be epik.</p>
+        <p>What sorts of info will this site contain? You might have asked.</p>
+        <p>Well you ask and you recive. This site will be my portfolio. Ikik ironic how I am making a portfolio
+            from scratch when I bearly know a lick of html. But trust me, I work hard to my goals and therefore I 
+            belive I will have a portfolio site within no time... Maybe. Well I am actually enjoying using css so 
+            we will see how this goes. Honestly, I've wanted to make a website from scratch since I started to code
+            but I never did because, html is just too hard. Well thats what I thought, apparently html's terrible 
+            syntax is actually not that duificult to learn. And here we are today.
+        </p>
+    </section>
+
+    <footer id="main-footer">
+        <p>Send help ong. pls.</p>
+    </footer>
 </body>
 </html>
