Last Modified Changelog: --Changed footer padding to 5px --Added last modified to footer of test page

--- a/testpage.html
+++ b/testpage.html
@@ -25,7 +25,12 @@
     </section>
 
     <footer id="main-footer">
-        <p>Send help ong. pls.</p>
+        <p id="last-modified"></p>
+
+        <script>
+            let text = document.lastModified;
+            document.getElementById("last-modified").innerHTML = "Last Updated: " + text;
+        </script>
     </footer>
 </body>
 </html>
