Fixed test page redirect Changelog: --The hyperlink to take you to the test page originally had the wrong link, now its fixed.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="main">
         <h2>This is where the other things go.</h2>
         <p>YAy?</p>
-        <p>Visit the test page <a href="www.chesterlk.com/testpage.html">here!</a></p>
+        <p>Visit the test page <a href="testpage.html">here!</a></p>
     </section>
 
     <footer id="main-footer">
